@@ -16,6 +16,7 @@ def register():
         User,
         Party,
         PartyCategory,
+        PartyIdentifier,
         Address,
         ContactMechanism,
         PartyInteraction,
