@@ -1,0 +1,10 @@
+<?xml version="1.0"?>
+<form string="Party Identifier">
+    <label name="party"/>
+    <field name="party"/>
+    <newline/>
+    <label name="type"/>
+    <field name="type"/>
+    <label name="code"/>
+    <field name="code"/>
+</form>
