@@ -1,3 +1,5 @@
+* Add party identifier
+
 Version 1.4 - 2015-05-29
 
 Version 1.3 - 2015-01-22
